# kimm

rbpodo_description/robots/urdf/: rb5_850e.gazebo.xacro  rb5_850e.urdf
rbpodo_description/robots/urdf/config/: rb5_controller.yaml
simulator/: package.xml  setup.py
simulator/simulator/: rb5_controller_node.py
simulator/simulator/models/canadarm/urdf/: Canadarm2.urdf  Canadarm2_w_iss.urdf
simulator/simulator/models/curiosity/: curiosity_mars_rover.urdf
simulator/simulator/models/franka/: franka.urdf
simulator/simulator/src/controller/: controller.py
src/rbpodo_description/launch/: test.launch.py
src/rbpodo_description/robots/urdf/: rb5_850e.urdf.xacro
src/rbpodo_description/robots/urdf/rviz/: rb5_rviz.rviz
src/simulator/simulator/models/canadarm/urdf/: floating_canadarm.urdf
src/simulator/simulator/models/curiosity/: curiosity.urdf
src/simulator/simulator/src/robot/: rb5_wrapper.py
src/simulator/simulator/src/trajectory/: trajManager.py
